adds test cases for controllers in lets_ride_auth
