# lets_ride_auth/views/user_profile/api_wrapper.py
@@ -1,30 +1,25 @@
+import json
 from django.http import HttpResponse
 from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
     import validate_decorator
 from .validator_class import ValidatorClass
-from lets_ride.storages.user_storage_implementation \
+from lets_ride_auth.storages.user_storage_implementation \
     import UserStorageImplementation
-from lets_ride.presenters.presenter_implementation \
+from lets_ride_auth.presenters.presenter_implementation \
     import PresenterImplementation
-from lets_ride.interactors.update_user_password_interactor \
-    import UpdateUserPasswordInteractor
-
+from lets_ride_auth.interactors.user_profile_interactor \
+    import UserProfileInteractor
 
 @validate_decorator(validator_class=ValidatorClass)
 def api_wrapper(*args, **kwargs):
     user_obj = kwargs['user']
     user_id = user_obj.id
-    request_data = kwargs['request_data']
-    new_password = request_data['new_password']
-
     storage = UserStorageImplementation()
     presenter = PresenterImplementation()
-    interactor = UpdateUserPasswordInteractor(
+    interactor = UserProfileInteractor(
         storage=storage,
         presenter=presenter,
     )
-    interactor.update_user_password_wrapper(
-        user_id=user_id,
-        new_password=new_password
-    )
-    return HttpResponse(status=200)
+    user_dict = interactor.user_profile_wrapper(user_id=user_id)
+    response_data = json.dumps(user_dict)
+    return HttpResponse(response_data, status=200)
